# rdylib

./: .gitignore  Cargo.toml  cbindgen.toml  config.rs.in  main.c  meson.build
.github/workflows/: main.yml
build-aux/: cargo_wrapper.py
include/: rdylib.h
src/: lib.rs
subprojects/: glib.wrap
