[package]
name = "rdylib"
version = "0.1.0"
edition = "2021"

[lib]
name         = "rdylib"
crate-type   = ["rlib", "staticlib"]

[profile.release]
strip = true
lto = true
#panic = "abort"

#[features]
#capi=[]
#staticlib=[]

#[package.metadata.capi.header]
#enabled = false

[dependencies]
glib = "0.16.2"
